#105 - added the new button without functionality
also changed the way date is displayed

--- a/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/AbsenceDetailsControlStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/AbsenceDetailsControlStyles.xaml
@@ -66,6 +66,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                         </customControls:InfoPoint>
 
+                        <TextBlock
+                            Text="{Binding Text}"
+                            Foreground="{StaticResource SprintCalendarInfoIconBrush}"/>
+
                         <ItemsPresenter />
 
                     </DockPanel>
