--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintMemberCalendar/SprintMemberCalendarWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintMemberCalendar/SprintMemberCalendarWindow.xaml
@@ -92,7 +92,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             <Border.Background>
                                 <SolidColorBrush
                                     Color="{StaticResource AccentColor}"
-                                    Opacity=".5"/>
+                                    Opacity=".5" />
                             </Border.Background>
                         </Border>
                     </DataTemplate>
@@ -109,7 +109,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         <customControls:CalendarDate
                             Value="{Binding Date}"
                             ShowWeekDay="True"
-                            Margin="2"/>
+                            Margin="5"
+                            MonthFontSize="10" />
                     </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
 
