--- a/sources/VeloCity.Wpf.UserAccess/NewSprintConfirmation/NewSprintConfirmationWindow.xaml
+++ b/sources/VeloCity.Wpf.UserAccess/NewSprintConfirmation/NewSprintConfirmationWindow.xaml
@@ -40,7 +40,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/StandardControls/StandardControlStyles.xaml" />
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Icons/SprintStateIconStyles.xaml" />
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/CustomControls/OkCancelWindowStyles.xaml" />
+                <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/CustomControls/CalendarDateStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
         </ResourceDictionary>
     </Window.Resources>
 
@@ -52,6 +54,64 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <customControls:GenericIcon Style="{StaticResource SprintNewIconStyle}" />
     </customControls:OkCancelWindow.TitleIcon>
 
-    <Grid />
+    <Grid>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+
+        <TextBlock
+            Grid.Row="0"
+            Grid.Column="0"
+            Text="Title"
+            Margin="0 0 0 8" />
+
+        <TextBox
+            Grid.Row="1"
+            Grid.Column="0"
+            Text="{Binding SprintTitle}" />
+
+        <TextBlock
+            Grid.Row="2"
+            Grid.Column="0"
+            Text="Length (Days)"
+            Margin="0 30 0 8" />
+
+        <TextBox
+            Grid.Row="3"
+            Grid.Column="0"
+            Text="{Binding SprintLength, UpdateSourceTrigger=PropertyChanged}" />
+
+        <StackPanel
+            Grid.Row="5"
+            Grid.Column="0"
+            Orientation="Horizontal"
+            Margin="0 40 0 0"
+            HorizontalAlignment="Center">
+
+            <customControls:CalendarDate
+                Value="{Binding StartDate}"
+                ShowWeekDay="True"
+                MonthFontSize="10"
+                FontSize="20"
+                Padding="10"/>
+
+            <customControls:CalendarDate
+                Value="{Binding EndDate}"
+                ShowWeekDay="True"
+                Margin="60 0 0 0"
+                MonthFontSize="10"
+                FontSize="20" />
+
+        </StackPanel>
+
+    </Grid>
 
 </customControls:OkCancelWindow>
