--- a/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/CalendarDateStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/CalendarDateStyles.xaml
@@ -28,16 +28,22 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
     <Style TargetType="{x:Type customControls:CalendarDate}">
+        <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
         <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
         <Setter Property="MonthFontSize" Value="{StaticResource DefaultFontSize}" />
         <Setter Property="WeekFontSize" Value="{StaticResource DefaultFontSize}" />
         <Setter Property="Padding" Value="8" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
 
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type customControls:CalendarDate}">
 
-                    <StackPanel Orientation="Horizontal">
+                    <StackPanel
+                        Orientation="Horizontal"
+                        VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                        HorizontalAlignment="{TemplateBinding HorizontalAlignment}">
 
                         <Border CornerRadius="2">
 
@@ -49,7 +55,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                             <StackPanel
                                 Margin="{TemplateBinding Padding}"
-                                Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}">
+                                MinWidth="{Binding ActualHeight, RelativeSource={RelativeSource Self}}">
 
                                 <TextBlock
                                     Text="{Binding Value, RelativeSource={RelativeSource TemplatedParent}, StringFormat={}{0:dd}}"
@@ -58,7 +64,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                     HorizontalAlignment="Center" />
 
                                 <TextBlock
-                                    Text="{Binding Value, RelativeSource={RelativeSource TemplatedParent}, StringFormat={}{0:MMM}}"
+                                    Text="{Binding Value, RelativeSource={RelativeSource TemplatedParent}, StringFormat={}{0:MMM yyyy}}"
                                     FontWeight="DemiBold"
                                     FontSize="{TemplateBinding MonthFontSize}"
                                     HorizontalAlignment="Center" />
