displayed the story points with bigger font size on the sprint overview page.

--- a/sources/VeloCity.Wpf.Presentation.Styles/Skins/DarkSkin.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Skins/DarkSkin.xaml
@@ -109,6 +109,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <FontFamily x:Key="DefaultFontFamily">OpenSans</FontFamily>
 
+    <!--<FontFamily x:Key="DefaultFontFamily">Century Gothic</FontFamily>-->
+
     <!--
     ================================================================================================
     Side Navigator
