#172 - updated displayed date format in sprint and employment pages

--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintsList/SprintsListView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintsList/SprintsListView.xaml
@@ -152,7 +152,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                                                     <TextBlock
                                                         x:Name="PART_DateInterval"
-                                                        Text="{Binding SprintDateInterval, StringFormat={}[{0}]}"
+                                                        Text="{Binding SprintDateInterval}"
                                                         Margin="10 0 0 0"
                                                         VerticalAlignment="Center" />
 
